# ktalk-bot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README.npm.md  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: CI.yml  ci-node.yml  publish-npm.yml
npm/test/: smoke.js  smoke.ts
pytests/: test_public_api.py
scripts/: copy-node-artifact.mjs  install-node-binding.mjs  release.sh
src/: error.rs  lib.rs
src/application/: bot_engine.rs  history.rs  mod.rs
src/domain/: auth.rs  bot.rs  history.rs  mod.rs  room.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs  token_loader.rs
src/infrastructure/http/: dto.rs  ktalk_http_client.rs  mod.rs
src/infrastructure/parsing/: history_mapper.rs  mod.rs  xmpp.rs
src/interface/: mod.rs  node.rs  python.rs
tests/: history_flow.rs
tests/fixtures/: history_response.json
tools/ktalk-packet-inspector/: README.md  inspector.html  inspector.js  manifest.json  popup.html  popup.js  service_worker.js  styles.css
