[package]
name = "ktalk-bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ktalk_bot"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "query", "rustls", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
http = "1.3.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
regex = "1.12.2"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
httptest = "0.16.3"
